--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "~4.14.0",
     "hbs": "~3.1.0",
     "mongoose": "^5.0.11",
+    "mongoose-unique-validator": "^2.0.0",
     "morgan": "~1.6.1",
     "reflect-metadata": "^0.1.3",
     "rxjs": "^5.5.0",
